# weather-and-tide

./: .env.example  .gitignore  DEVELOP~.md  README.md  api_caller.py  apis.py  config.py  config_loader.py  county_to_fips.json  email-template.html  email_generator.py  example.config.yaml  example.env  example.locations.yaml  locations.yaml.example  mailer.py  main.py  pyproject.toml  requirements.txt  response_parser.py  run.py  weather-tide-template.html
response_parser/: __init__.py  parse_moon_phase.py  parse_tide.py  parse_warning.py  parse_weather.py
tests/: test-locations_invalid.yaml  test-locations_valid.yaml  test_apis.py  test_config_loader.py  test_response_parser.py
tests/cached_api_responses/: tide.json  warnings.json  weather.xml
tests/developer/: test_api_caller.py  test_config.py  test_config_loader.py  test_response_parser.py
tests/developer/test_response_parser/: test_tide.py  test_warning.py  test_weather.py
tests/integration/: test_api_caller.py  test_apis.py  test_call_api.py  test_generate_mail.py  test_mailer.py  test_response_to_mail.py  test_send_mail.py
weather_and_tide/: __init__.py  api_caller.py  config.py  email-template.html  email_generator.py  mailer.py  main.py
weather_and_tide/response_parser/: __init__.py  parse_tide.py  parse_warning.py  parse_weather.py
weather_and_tide/tests/: test-locations_valid.yaml
weather_and_tide/tests/cached_api_responses/: moon.json
weather_and_tide/tests/developer/: test_api_caller.py  test_config.py
weather_and_tide/tests/integration/: test_call_api.py  test_generate_mail.py  (+1 more)
(+3 files in other folders)
